--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "MyApp",
-    "name": "My React PWA",
+    "short_name": "LangarSewa",
+    "name": "Sudarshan Sena Bhojan Vitran",
     "icons": [
       {
         "src": "logo192.png",
