--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "googleapis": "^148.0.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
